# projeto_esocial_new

./: .env  pyproject.toml
database/: connection.py
